Add Catéforie , Add Commentaire , Add ServiceUser , Add ControlleurUser , ect

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,12 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 
+# https://stackoverflow.com/questions/52656517/no-serializer-found-for-class-org-hibernate-proxy-pojo-bytebuddy-bytebuddyinterc
+#la Requet (@Query) pour selectionner la liste de commentaire where id Annonce n'executer pas \
+# => pour cela en ajouter ce line
+spring.jackson.serialization.fail-on-empty-beans=false
+
 
 # App Properties
-grokonez.app.jwtSecret=jwtGrokonezSecretKey
+grokonez.app.jwtSecret=jwtSaycomLabSecretKey
 grokonez.app.jwtExpiration=86400
